@@ -1,6 +1,8 @@
 Version 1.12.5+dev:
  * Language and i18n:
    * Updated translations: Galician, Italian, RACV, Russian, Slovak, Swedish
+ * User interface:
+   * GUI1 comboboxes now use the thinner menu frame style.
 
 Version 1.12.5:
  * Campaigns:
